--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ target/
 *.iws
 *.iml
 *.ipr
-
+.idea/
 ### Eclipse ###
 .apt_generated
 .classpath
@@ -36,3 +36,4 @@ build/
 
 ### Mac OS ###
 .DS_Store
+/.idea/
