--- a/dandanWeb-rest/src/main/resources/application.yaml
+++ b/dandanWeb-rest/src/main/resources/application.yaml
@@ -9,3 +9,11 @@ spring:
     password: password
 server: #程序访问端口号
   port: 8081
+danDanWeb:
+  scanPath: G:\动漫
+  targetPath: G:\newanime\
+  tempPath: G:\newanime\temp\
+  failedPath: G:\newanime\failed\
+  cron: 30 * * * * ?
+danDanApi:
+  match: https://api.dandanplay.net/api/v2/match
