--- a/dandanWeb-rest/src/main/resources/application.yaml
+++ b/dandanWeb-rest/src/main/resources/application.yaml
@@ -3,10 +3,8 @@ mybatis: #mybatis配置
   type-aliases-package: xyz.ezsky.entity
 spring:
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/dandanweb?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
-    username: root
-    password: password
+    driver-class-name: org.sqlite.JDBC
+    url: jdbc:sqlite:mydatabase.db
 server: #程序访问端口号
   port: 8081
 danDanWeb:
