修改db由config创建

--- a/dandanWeb-rest/src/main/resources/application.yaml
+++ b/dandanWeb-rest/src/main/resources/application.yaml
@@ -15,3 +15,10 @@ danDanWeb:
   cron: 30 * * * * ?
 danDanApi:
   match: https://api.dandanplay.net/api/v2/match
+database:
+  create:
+    table:
+      sql:
+        file: createtable.sql
+  file:
+    path: database.db
