--- a/dandanWeb-rest/src/main/resources/application.yaml
+++ b/dandanWeb-rest/src/main/resources/application.yaml
@@ -8,10 +8,10 @@ spring:
 server: #程序访问端口号
   port: 8081
 danDanWeb:
-  scanPath: G:\动漫
-  targetPath: G:\newanime\
-  tempPath: G:\newanime\temp\
-  failedPath: G:\newanime\failed\
+  scanPath: media/source
+  targetPath: media/target/
+  tempPath: media/temp/
+  failedPath: media/source/failed/
   cron: 30 * * * * ?
 danDanApi:
   match: https://api.dandanplay.net/api/v2/match
@@ -21,4 +21,4 @@ database:
       sql:
         file: createtable.sql
   file:
-    path: database.db
+    path: config/database.db
