--- a/dandanWeb-rest/pom.xml
+++ b/dandanWeb-rest/pom.xml
@@ -85,20 +85,16 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.12.0</version> <!-- 版本号可以根据需要进行调整 -->
         </dependency>
+        <!--m3u8视频转码需要FFmpeg依赖-->
 
+        <dependency>
+            <groupId>ws.schild</groupId>
+            <artifactId>jave-all-deps</artifactId>
+            <version>3.5.0</version>
+        </dependency>
     </dependencies>
 
     <repositories>
-        <repository>
-            <id>spring-milestones</id>
-            <name>Spring Milestones</name>
-            <url>https://repo.spring.io/libs-milestone</url>
-        </repository>
-        <!-- 添加OpenCV的repository -->
-        <repository>
-            <id>opencv</id>
-            <url>https://maven.pkg.openai.com/opencv</url>
-        </repository>
         <repository>
             <id>aliyun</id>
             <name>aliyun</name>
