--- a/dandanWeb-rest/pom.xml
+++ b/dandanWeb-rest/pom.xml
@@ -162,6 +162,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
+                <version>3.1.0</version>
                 <configuration>
                     <resources>
                         <resource>
