为了某人的要求连夜修改代码

--- a/dandanWeb-rest/src/main/resources/application.yaml
+++ b/dandanWeb-rest/src/main/resources/application.yaml
@@ -5,9 +5,10 @@ spring:
     driver-class-name: org.sqlite.JDBC
     url: jdbc:sqlite:mydatabase.db
 server: #程序访问端口号
-  port: 8081
+  port: 8082
 danDanApi:
   match: https://api.dandanplay.net/api/v2/match
+  anime: https://api.dandanplay.net/api/v2/bangumi
 database:
   create:
     table:
