对动漫搜索接口进行分页

--- a/dandanWeb-rest/src/main/resources/application.yaml
+++ b/dandanWeb-rest/src/main/resources/application.yaml
@@ -16,3 +16,8 @@ database:
         file: createtable.sql
   file:
     path: app/config/database.db
+pagehelper:
+  helperDialect: sqlite
+  reasonable: true
+  supportMethodsArguments: true
+  params: count=countSql
