--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -43,7 +43,7 @@ jobs:
         java-version: '11'
 
     - name: Build backend with Maven
-      run: /var/jenkins_home/maven3/bin/mvn -s /var/jenkins_home/settings.xml clean package
+      run: mvn clean package
 
     - name: Login to Docker Hub
       run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
