--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -49,10 +49,10 @@ jobs:
       run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
     - name: Build Docker image
-      run: docker build -t ezsky333/hanimetool .
+      run: docker build -t ezsky333/dandanserver .
 
     - name: Push Docker image to Docker Hub
-      run: docker push ezsky333/hanimetool
+      run: docker push ezsky333/dandanserver
 
     - name: Logout of Docker Hub
       run: docker logout
